--- a/paleoclimate_prediction/main_app/templates/main_app/home.html
+++ b/paleoclimate_prediction/main_app/templates/main_app/home.html
@@ -1,3 +1,21 @@
 {% extends 'main_app/base.html' %} {% block content %}
-<main></main>
+<main>
+    <section class="predictions">
+        <a href="templates/main_app/prediction.html" class="prediction-a">
+            <article class="prediction" id="prediction1">
+                <h3>Prediction 1</h3>
+            </article>
+        </a>
+        <a href="" class="prediction-a">
+            <article class="prediction" id="prediction2">
+                <h3>Prediction 2</h3>
+            </article>
+        </a>
+        <a href="" class="prediction-a">
+            <article class="prediction" id="prediction3">
+                <h3>Prediction 3</h3>
+            </article>
+        </a>
+    </section>
+</main>
 {% endblock content %}
