--- a/paleoclimate_prediction/main_app/templates/main_app/base.html
+++ b/paleoclimate_prediction/main_app/templates/main_app/base.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <h1>Paleoclimate Prediction</h1>
+      <h1><a href="{% url 'main-home' %}">Paleoclimate Prediction</a></h1>
     </header>
     {% block content %}{% endblock %}
     <footer>
