--- a/paleoclimate_prediction/main_app/templates/main_app/prediction.html
+++ b/paleoclimate_prediction/main_app/templates/main_app/prediction.html
@@ -5,5 +5,18 @@
     {% else %}
         <h2>Prediction X</h2>
     {% endif %}
+    <section class="results-section">
+        <div class="results-score-div">
+            <h3>Prediction Score</h3>
+            {% if prediction_result %}
+                <p>{{ prediction_result }}</p>
+            {% endif %}
+        </div>
+        <div class="results-graph-div">
+            {% if prediction_graph %}
+                <img src="data:image/png;base64, {{ prediction_graph|safe }}" alt="prediction graph" class="graph-img">
+            {% endif %}
+        </div>
+    </section>
 </main>
 {% endblock content %}
