addition: added a prediction for kissinger lakes, wyoming

--- a/paleoclimate_prediction/main_app/templates/main_app/home.html
+++ b/paleoclimate_prediction/main_app/templates/main_app/home.html
@@ -7,12 +7,12 @@
                 <h3>Model Results</h3>
             </article>
         </a>
-<!--        <a href="" class="prediction-a">-->
-<!--            <article class="prediction" style="background-image: url('{% static 'main_app/images/josefin-HtCgLIDy-2U-unsplash.jpg' %}');">-->
-<!--                <h3>Create Prediction</h3>-->
-<!--            </article>-->
-<!--        </a>-->
-        <a href="{% url 'main-prediction' %}" class="prediction-a">
+        <a href="{% url 'main-prediction-wyo' %}" class="prediction-a">
+            <article class="prediction" style="background-image: url('{% static 'main_app/images/josefin-HtCgLIDy-2U-unsplash.jpg' %}');">
+                <h3>Prediction Sample - Kissinger Lakes, Wyoming</h3>
+            </article>
+        </a>
+        <a href="{% url 'main-prediction-penn' %}" class="prediction-a">
             <article class="prediction" style="background-image: url('{% static 'main_app/images/sebastian-hans-lkpW4VC_dqI-unsplash.jpg' %}');">
                 <h3>Prediction Sample - Arendtsville, Pennsylvania</h3>
             </article>
